--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^7.1.0",
     "@heroicons/react": "^2.0.18",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
